--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,5 +10,27 @@ pages:
 - Installation: installation.md
 - Ecosystem: ecosystem.md
 - Similar Packages: comparison.md
-theme: readthedocs
+markdown_extensions:
+  - admonition
+ - pymdownx.arithmatex
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:pymdownx.emoji.to_svg
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
 
+theme:
+  name: 'material'
+  palette:
+    primary: 'purple'
+    accent: 'purple'
