--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,9 @@
-site_name: "Org-Roam: Roam + Org-Mode = 💝"
+site_name: "Org-Roam: Roam + Org-Mode = ♥"
 repo_url: https://github.com/jethrokuan/org-roam/
 edit_uri: edit/master/doc/
-site_favicon: favicon.ico
 copyright: "Copyright (C) 2020 Jethro Kuan and contributors"
 docs_dir: doc
-pages:
+nav:
 - Home: index.md
 - A Tour of Org-Roam: tour.md
 - Installation: installation.md
@@ -27,5 +26,5 @@ markdown_extensions:
 theme:
   name: 'material'
   palette:
-    primary: 'purple'
-    accent: 'purple'
+    primary: 'deep purple'
+    accent: 'deep purple'
