--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
 - Ecosystem: ecosystem.md
 - Similar Packages: comparison.md
 - "Appendix: Note-taking Workflow": notetaking_workflow.md
+- "Appendix: Graph Setup": graph_setup.md
 markdown_extensions:
   - admonition
   - pymdownx.betterem:
