(docs): Add documentation for #+ROAM_ALIAS attribute

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
 - A Tour of Org-Roam: tour.md
 - Installation: installation.md
 - Configuration: configuration.md
+- Anatomy of a Roam file: anatomy.md
 - Ecosystem: ecosystem.md
 - Similar Packages: comparison.md
 - "Appendix: Note-taking Workflow": notetaking_workflow.md
