(ci): remove old docs, add landing page

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -29,6 +29,7 @@ dir: org-roam.info
 html-dir: 
 	@printf "Generating org-roam/*.html\n"
 	@$(MAKEINFO) --html org-roam.texi
+	mv org-roam manual
 
 %.pdf: %.texi
 	@printf "Generating $@\n"
