--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,4 +27,4 @@ jobs:
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: doc # The folder the action should deploy.
+        FOLDER: doc/org-roam # The folder the action should deploy.
