(ci): move images to the correct location

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,10 +20,7 @@ jobs:
 
     - name: Build docs
       continue-on-error: false
-      run: |
-        cd doc
-        makeinfo --html org-roam.texi
-        mv org-roam manual
+      run: make html
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@releases/v3
